k8s/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-service
  namespace: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-service
  template:
    metadata:
      labels:
        app: node-service
    spec:
      imagePullSecrets:
      - name: dockerhub-pull-secret
      containers:
      - name: node-service
        image: mdsadidtahsin/node-urlshortener:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "400m"
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
