k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-api-ingress
  namespace: urlshortener
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/go(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-service
            port:
              number: 8000
      - path: /api/node(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-service
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ui-ingress
  namespace: urlshortener
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-service
            port:
              number: 5000
